--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </li>
         <li><strong>Governing Law:</strong>
             <ul>
-                <li>These terms and conditions shall be governed by and construed in accordance with the laws of The Polar Land. Any disputes arising out of or in connection with these terms and conditions shall be subject to the exclusive jurisdiction of the courts of The Polar Land.</li>
+                <li>These terms and conditions shall be governed by and construed in accordance with the laws of the server. Any disputes arising out of or in connection with these terms and conditions shall be subject to the exclusive jurisdiction of the courts of the server.</li>
             </ul>
         </li>
     </ol>
